<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sign</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="translation">Translation</string>
    <string name="reply">Reply</string>
    <string name="record">record</string>
    <string name="init_translate_box_text">Start signing!</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
</resources>